# chaos_gr_RT

./: .gitignore  CMakeLists.txt
include/: pixelCanvas.h  ppmFileGenerator.h
src/: main.cpp  pixelCanvas.cpp  ppmFileGenerator.cpp
